thembisa_v4.7/main_analysis/scenario1b/output_30445093.txt
THEMBISA.cpp: In function ‘void ResultsAtEndOfYr2()’:
THEMBISA.cpp:13455:48: error: ‘R_gen_nonstd’ was not declared in this scope; did you mean ‘R_gen_std’?
13455 |         double denom_w = 0.0, R_gen_std = 0.0; R_gen_nonstd = 0.0; // the R_gen_nonstd is not important and is doubly calculatiing..
      |                                                ^~~~~~~~~~~~
      |                                                R_gen_std
/var/spool/slurmd.spool/job30445093/slurm_script: line 13: ./mod1b_IRR_generation30: No such file or directory
